--- a/tearay/pom.xml
+++ b/tearay/pom.xml
@@ -10,6 +10,7 @@
   <modules>
     <module>tearay-api</module>
     <module>tearay-processor</module>
+    <module>tearay-widgets</module>
     <module>tearay-app</module>
   </modules>
 
