--- a/tearay/pom.xml
+++ b/tearay/pom.xml
@@ -11,6 +11,7 @@
     <module>tearay-api</module>
     <module>tearay-processor</module>
     <module>tearay-widgets</module>
+    <module>tearay-material-widgets</module>
     <module>tearay-int-test-app</module>
   </modules>
 
