Add Scheduler wrapper and enable injection
- Added `Scheduler` and `Cancellable` interfaces to `tearay-ui`.
- Added `SchedulerImpl` implementation wrapping `setTimeout`, `setInterval`, `requestAnimationFrame`.
- Updated `IOCProcessor` to map `Scheduler` interface to `SchedulerImpl_Factory`.
- Added `tearay-processor` dependency to `tearay-ui` to enable factory generation.
- Fixed compilation errors in `TemplatedProcessor.java` (duplicate variable declarations, syntax errors, unreachable code).
- Updated `TemplatedProcessorTest.java` to match fixed logic.

--- a/tearay/tearay-ui/pom.xml
+++ b/tearay/tearay-ui/pom.xml
@@ -21,6 +21,12 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>uk.co.instanto.tearay</groupId>
+      <artifactId>tearay-processor</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.teavm</groupId>
       <artifactId>teavm-jso</artifactId>
     </dependency>
