--- a/tearay/tearay-app/pom.xml
+++ b/tearay/tearay-app/pom.xml
@@ -58,6 +58,24 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>net.sourceforge.htmlunit</groupId>
+      <artifactId>htmlunit</artifactId>
+      <version>2.70.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-chrome-driver</artifactId>
+        <version>4.16.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-remote-driver</artifactId>
+        <version>4.16.0</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
@@ -81,6 +99,8 @@
         <configuration>
           <systemPropertyVariables>
             <teavm.junit.target>${project.build.directory}/js-tests</teavm.junit.target>
+            <teavm.junit.browser>chrome</teavm.junit.browser>
+            <teavm.junit.headless>true</teavm.junit.headless>
           </systemPropertyVariables>
         </configuration>
       </plugin>
