--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -14,7 +14,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     concurrency:
-      group: "pages"
+      group: "tearay-app-build"
       cancel-in-progress: false
     steps:
       - name: Checkout
