--- a/tearay/tearay-app/pom.xml
+++ b/tearay/tearay-app/pom.xml
@@ -58,6 +58,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>uk.co.instanto.tearay</groupId>
+      <artifactId>tearay-persistence</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.teavm</groupId>
       <artifactId>teavm-junit</artifactId>
       <scope>test</scope>
