Implement Worker-based Authentication Flow in Demo App
Added AuthenticationService interface and implementation (with mock logic) in verrai-app.
Configured teavm-maven-plugin to generate a worker.js for the AuthenticationService.
Added verrai-annotation-processor dependency to verrai-app to enable RPC stub/dispatcher generation.
Updated LoginPage to use WebWorkerTransport and DebugTransport for authentication flow.
Added DebugTransport to display RPC messages in a UI overlay.
Refactored to use generated Dispatcher and Factory classes directly, removing reflection hacks.

--- a/verrai-app/pom.xml
+++ b/verrai-app/pom.xml
@@ -23,6 +23,12 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>uk.co.instanto</groupId>
+      <artifactId>verrai-annotation-processor</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.teavm</groupId>
