Refactor: Move UnitRegistry to verrai-rpc-common and split POJOs
This commit resolves code duplication and circular dependency issues by:
1.  Moving `UnitRegistry`, `RpcClient`, `DiscoveryService`, `EventBus`, and related classes from `verrai-rpc-core` and `verrai-rpc-client` to `verrai-rpc-common`, creating a single source of truth.
2.  Creating a new module `verrai-rpc-spi` to hold shared RPC annotations (`@Portable`, `@Service`, `@Event`) and interfaces (`Codec`, `CodecLoader`), breaking the cycle between `verrai-rpc-common` and `verrai-annotation-processor`.
3.  Creating a new module `verrai-rpc-pojos` to hold the `@Portable` data transfer objects (`RpcPacket`, `EventPacket`) and generate their Wire Protobuf counterparts using the annotation processor.
4.  Refactoring `UnitRegistry` to remove the transport-specific `configureStomp` method, moving that logic to a new `StompConfigurator` in `verrai-rpc-core`.
5.  Updating POMs to reflect the new module structure and dependencies.

Verified by compiling all affected modules and running relevant tests.

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
     <module>verrai-ui</module>
     <module>verrai-persistence</module>
     <module>verrai-app</module>
+    <module>verrai-rpc-spi</module>
+    <module>verrai-rpc-pojos</module>
   </modules>
 
   <properties>
